--- a/src/VSMac/YamlSense.VSMac.csproj
+++ b/src/VSMac/YamlSense.VSMac.csproj
@@ -3,13 +3,20 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Mono.Addins" Version="1.3.8" />
     <PackageReference Include="MonoDevelop.Addins" Version="0.4.4" />
-    <PackageReference Include="FriendlyLocale" Version="0.2.4" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Completion\" />
+    <Folder Include="Completion\Suggest\" />
+    <Folder Include="Completion\CompletionCategory\" />
+    <Folder Include="Completion\Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove=".DS_Store" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Completion\Suggest\FullSuggestListKeeper.cs" />
+    <Compile Remove="Completion\Suggest\CompletionResult.cs" />
   </ItemGroup>
 </Project>
