--- a/src/VSMac/YamlSense.VSMac.csproj
+++ b/src/VSMac/YamlSense.VSMac.csproj
@@ -2,6 +2,12 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <LangVersion>Latest</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <LangVersion>Latest</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Mono.Addins" Version="1.3.8" />
     <PackageReference Include="MonoDevelop.Addins" Version="0.4.4" />
