--- a/src/VSMac/YamlSense.VSMac.csproj
+++ b/src/VSMac/YamlSense.VSMac.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Mono.Addins" Version="1.3.8" />
     <PackageReference Include="MonoDevelop.Addins" Version="0.4.4" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Completion\" />
